<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo1"
                android:src="@drawable/camera"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/bilbo_swash_caps"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="InefficientWeight,TextSizeCheck"
                />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/instatv" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo"
                android:tint="@color/textcolor"
                app:srcCompat="@drawable/send"
                tools:ignore="UseAppTint"
                />
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        android:layout_alignParentBottom="true"
        tools:ignore="VisualLintBottomNav"
        app:labelVisibilityMode="selected"
        app:elevation="6dp"
        />

    <fragment
        android:id="@+id/main_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation"
        android:layout_below="@+id/toolbar1"
        android:layout_above="@+id/nav_view"
        tools:ignore="FragmentTagUsage" />

</RelativeLayout>